objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cc__c</fullName>
        <label>Cc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feedback_Loop__c</fullName>
        <label>Feedback Loop</label>
        <referenceTo>SMART_Feedback__c</referenceTo>
        <relationshipLabel>Feedback_Communication</relationshipLabel>
        <relationshipName>Feedback_Communication</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feedback Communication</label>
    <nameField>
        <displayFormat>FN-{000000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback_Communication</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>